# XIII_ET_Symposium_Hackathon

./: .gitignore  README.md
data/: BNS_100ev_pop.csv  covariance_170817.txt  detectors.yaml  gwfast_covariance.txt
introduction/: README.md  Symposium.bib  antenna_patterns.py  fisher-explanation.html  fisher-explanation.qmd  fisher-presentation.qmd  multivariate_normal.py  pyproject.toml
notebooks/: gwfast_tutorial.ipynb  gwfish_tutorial.ipynb
notebooks/.ipynb_checkpoints/: gwfast_tutorial-checkpoint.ipynb
